<resources>
    <string name="app_name">Rubyjira</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img">img</string>
    <string name="label_username">UserName</string>
    <string name="label_password">Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="label_change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="label_enter_your_password">Enter your password</string>
    <string name="label_password_confirm">Password confirm</string>
    <string name="label_enter_new_password">Enter new password</string>
    <string name="label_setting">Setting</string>
    <string name="label_change_setting">Change setting</string>
    <string name="label_logout">Logout</string>
    <string name="select">Select</string>
    <string name="select_tasks">Select tasks status</string>
    <string name="label_filter_project">Filter by project</string>
    <string name="upcoming">"Upcoming "</string>
    <string name="overdue">Overdue</string>
    <string name="noOverdue">No Overdue</string>
    <string name="completed">Completed</string>
    <string name="password_not_valid">Password must contain at least 8 characters</string>
    <string name="label_enter_your_email">Enter your email</string>
    <string name="index">Inbox</string>
    <string name="today">Today</string>
    <string name="editProfile">Edit profile</string>
    <string name="label_skip">Skip</string>
    <string name="label_introWelcome1_title">Task magement</string>
    <string name="label_introWelcome1_content">Let\'s Create a Space Workflows</string>
    <string name="label_introWelcome2_content">Task , Calendar</string>
    <string name="label_introWelcome3_content">Work With Team Anytime</string>
    <string name="next">Next</string>
    <string name="label_introWelcome_title">RUBYJIRA</string>
    <string name="password_not_match">Password not match</string>
    <string name="choose_image">Choose image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>