<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.devartlab.rubyjira.app.presentation.onBoard.IntroItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/imageView_introImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintBottom_toTopOf="@+id/textView_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:src="@drawable/ic_intro_img_1"
            myImageResource="@{item.drawableImageId}"
            android:contentDescription="@string/img" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColor="@color/color_94c356"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/textView_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_introImage"
            tools:text="@string/label_introWelcome1_title"
            android:text="@{item.title}" />

        <TextView
            android:id="@+id/textView_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title"
            tools:text="@string/label_introWelcome1_content"
            android:text="@{item.content}" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>