<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.devartlab.rubyjira.app.presentation.editProfile.EditProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/_custom_bg_curve_top_white">

        <TextView
            android:id="@+id/textView116"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/choose_image"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView105"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{() -> viewModel.setCameraImageNumber()}"
            android:text="@string/camera"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:drawableTopCompat="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView104"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView116" />

        <TextView
            android:id="@+id/textView104"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:onClick="@{() -> viewModel.setGalleryImageNumber()}"
            android:text="@string/gallery"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:drawableTopCompat="@drawable/ic_image_gallery"
            app:layout_constraintBottom_toBottomOf="@+id/textView105"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView105"
            app:layout_constraintTop_toTopOf="@+id/textView105" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>