<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.presentation.home.HomeFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/iv_home"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_label_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/select_tasks"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/ed_filter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ed_filter" />

                <TextView
                    android:id="@+id/ed_filter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/_custom_bg_curve_edit_text"
                    android:hint="@string/select"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:drawableStartCompat="@drawable/ic_drop_down"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_label_filter"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField_login_pass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/label_filter_project"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/color_94c356"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/ed_filter"
                    app:layout_constraintStart_toStartOf="@id/tv_label_filter"
                    app:layout_constraintTop_toBottomOf="@+id/ed_filter"
                    app:prefixTextColor="@color/color_94c356"
                    app:startIconDrawable="@drawable/ic_baseline_desktop_mac_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_login_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/textField_login_pass"
                    app:layout_constraintTop_toBottomOf="@+id/textField_login_pass" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_upcoming"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/textField_login_pass"
                    app:layout_constraintStart_toStartOf="@id/textField_login_pass"
                    app:layout_constraintTop_toBottomOf="@+id/tv_upcoming"
                    tools:listitem="@layout/_item_task"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:id="@+id/tv_overdue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overdue"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/textField_login_pass"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_upcoming" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_overdue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/textField_login_pass"
                    app:layout_constraintStart_toStartOf="@id/textField_login_pass"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overdue"
                    tools:listitem="@layout/_item_task"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:id="@+id/tv_noOverdue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noOverdue"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/textField_login_pass"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_overdue" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_noOverdue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/textField_login_pass"
                    app:layout_constraintStart_toStartOf="@id/textField_login_pass"
                    app:layout_constraintTop_toBottomOf="@+id/tv_noOverdue"
                    tools:listitem="@layout/_item_task"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:id="@+id/tv_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="@+id/textField_login_pass"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_noOverdue" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_completed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/textField_login_pass"
                    app:layout_constraintStart_toStartOf="@id/textField_login_pass"
                    app:layout_constraintTop_toBottomOf="@+id/tv_completed"
                    tools:listitem="@layout/_item_task"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>